[gd_scene load_steps=9 format=2]

[ext_resource path="res://tom/tom.png" type="Texture" id=1]
[ext_resource path="res://tom/Tom.gd" type="Script" id=2]
[ext_resource path="res://tom/HealthBar.gd" type="Script" id=3]
[ext_resource path="res://tom/health_bar_under.png" type="Texture" id=4]
[ext_resource path="res://tom/focus_bar_progress.png" type="Texture" id=5]
[ext_resource path="res://tom/health_bar_progress.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.54343
height = 6.54183

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Tom" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 14
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )

[node name="FocusTimer" type="Timer" parent="."]
one_shot = true

[node name="FocusBar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -14.9296
margin_right = 8.0
margin_bottom = -12.9296
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="HealthBar"]
margin_left = -8.0
margin_top = -11.5435
margin_right = 8.0
margin_bottom = -9.54353
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )
tint_progress = Color( 1, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="HealthBar"]
margin_left = -8.0
margin_top = -11.5435
margin_right = 8.0
margin_bottom = -9.5435
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 6 )
tint_under = Color( 1, 1, 1, 0 )
tint_over = Color( 1, 1, 1, 0 )
tint_progress = Color( 0.196078, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="HealthBar"]
[connection signal="timeout" from="FocusTimer" to="." method="_on_FocusTimer_timeout"]
